# ant-drone-ros2

./: .clang-format  .env  .gitignore  .gitmodules  99-usbcam.rules  README.md  balena-ethernet-02  docker-compose.drone0_nav.yaml  docker-compose.drone0_slam.yaml  docker-compose.drone_nav.yaml  docker-compose.drone_slam.yaml  docker-compose.drone_worker.yaml  docker-compose.isaacsim.yaml  docker-compose.local.yaml  docker-compose.nav_demo.yaml  docker-compose.rdj.yaml  docker-compose.real.yaml  docker-compose.rmf_editor.yaml  docker-compose.sim.nav_demo.yaml  docker-compose.sim.slam_demo.yaml  docker-compose.slam.yaml  docker-compose.slam_demo.yaml  docker-compose.teleop.yaml  docker-compose.yaml  docker-compose.yolo.yaml  ros_domains.env
antdrone_apriltag/: package.xml  setup.cfg  setup.py
antdrone_bringup/: package.xml  setup.cfg  setup.py
antdrone_bt/: CMakeLists.txt  package.xml
antdrone_bt/behavior_trees/: antdrone_groot.btproj  drone_bt.xml  floor_mission.xml
antdrone_bt/include/: bt_datatypes.h  nodes.h
antdrone_bt/queen_domain_bridge/: queen_domain_bridge.yaml
antdrone_bt/src/: antdrone_bt.cpp  queen_domain_bridge.cpp
antdrone_bt/src/bt_cpp_nodes/: check_go_to_waypoint_success.cpp  check_heartbeat.cpp  check_if_selected_for_floor_mission.cpp  check_rmf_client_idle.cpp  clear_costmap.cpp  go_to_waypoint.cpp  go_under_worker.cpp  lower_worker.cpp  pickup_worker.cpp  register_drone.cpp  send_dropoff_position.cpp  set_controller_params.cpp  set_costmap_params.cpp  succeed_floor_mission.cpp  suspend_release_rmf_pathing.cpp  trigger_worker_comeout.cpp  update_footprint.cpp
antdrone_description/: CMakeLists.txt  frames_2025-02-03_19.52.32.gv  package.xml
antdrone_gz/: CMakeLists.txt  package.xml
antdrone_gz/config/: drone_gz_ros_domain_bridge.yaml  spawn_poses.yaml
antdrone_gz/launch/: spawn_drone.launch.py
antdrone_gz/src/: gz_frame_name_fixer.cpp  gz_ros_domain_bridge.cpp
antdrone_interfaces/: CMakeLists.txt  package.xml
antdrone_joystick/: package.xml  setup.cfg  setup.py
antdrone_laserscan/: package.xml  setup.cfg  setup.py
antdrone_localization/: package.xml  setup.cfg  setup.py
antdrone_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
antdrone_navigation/antdrone_navigation/: amcl_pose_debugger.py
antdrone_navigation/behavior_trees/: navigate_through_poses.xml
antdrone_navigation/config/: amcl.yaml  behaviors.yaml  bt.yaml  controller.yaml  filter_mask_server.yaml  keepout_filter.yaml  lifecycle_manager.yaml  map_editor.yaml  map_server.yaml  planner.yaml  start_poses.yaml  vel_smoother.yaml
antdrone_navigation/launch/: map_editor.launch.py  navigation.launch.py  slam_bringup.launch.py  slam_navigation.launch.py
antdrone_navigation/rviz/: drone_boris.rviz
antdrone_navigation/slam_images/0.0/: transforms.csv
antdrone_nicegui/: package.xml  setup.cfg  setup.py
antdrone_pcl/: package.xml  setup.cfg  setup.py
antdrone_queen_client/: package.xml  setup.cfg  setup.py
antdrone_realsense/: package.xml  setup.cfg  setup.py
antdrone_slam/: package.xml  setup.cfg  setup.py
apriltags/: apriltag_finder.py
docker/: apriltag.dockerfile  bt.dockerfile  depth_to_laserscan.Dockerfile  foxglove.dockerfile  gz.dockerfile  gz_spawn.dockerfile  joystick.dockerfile  keyboard_teleop.dockerfile  laserscan.Dockerfile  nav.dockerfile  pointcloud.dockerfile  queen_client.dockerfile  realsense.dockerfile  robot_description.dockerfile  slam.dockerfile  usbcam.dockerfile  yolo.dockerfile
docs/: IsaacSim copy 2.md  IsaacSim.md  RMF_traffic_editor.md  SLAM.md  bt.md  fleet_manager.md
floor_mission_bt/: CMakeLists.txt  package.xml
floor_mission_bt/behavior_trees/: floor_mission.xml
floor_mission_bt/domain_bridge/: domain_bridge.yaml
floor_mission_bt/include/: bt_datatypes.h  nodes.h
floor_mission_bt/launch/: bt.launch.py
floor_mission_bt/src/: domain_bridge.cpp  floor_mission_bt.cpp  static_bridge.cpp
floor_mission_bt/src/bt_cpp_nodes/: check_comeout_complete.cpp  check_floor_mission_triggered.cpp  check_go_to_place_success.cpp  check_heartbeat.cpp  check_idle.cpp  check_if_selected_for_floor_mission.cpp  check_pickup.cpp  check_selected_for_floor_mission.cpp  clear_costmap.cpp  go_to_place.cpp  go_to_waypoint.cpp  init_drone_vars.cpp  lower_pickup_worker.cpp  lower_worker.cpp  moveout.cpp  pickup_worker.cpp  publish_drone_queen_state.cpp  register_drone.cpp  release_rmf_pathing.cpp  send_comeout_trigger.cpp  send_dropoff_position.cpp  send_floor_mission_success.cpp  send_heartbeat_to_queen.cpp  send_pickup_cmd.cpp  send_release_rmf_pathing.cpp  send_suspend_rmf_pathing.cpp  set_costmap_params.cpp  suspend_rmf_pathing.cpp  trigger_worker_comeout.cpp
floor_mission_helper/: package.xml  setup.cfg  setup.py
linorobot2_bringup/: CMakeLists.txt  package.xml
linorobot2_description/: CMakeLists.txt  frames_2024-11-05_15.56.36.gv  frames_2024-11-05_15.57.31.gv  frames_2024-11-18_21.09.08.gv
linorobot2_gz/: CMakeLists.txt  package.xml
linorobot2_jack/: package.xml  setup.cfg  setup.py
linorobot2_joystick/: setup.py
linorobot2_localization/: frames_2024-11-11_17.40.01.gv  setup.py
linorobot2_navigation/: CMakeLists.txt  package.xml
linorobot2_navigation/config/: amcl.yaml  behaviors.yaml  bt.yaml  controller.yaml  controller_dwb_archive.yaml  filter_mask_server.yaml  lifecycle_manager.yaml  lifecycle_manager_costmap_filters.yaml  map_editor.yaml  map_server.yaml  navigate_through_poses.xml  navigate_to_pose.xml  navigation.yaml  planner.yaml  slam.yaml  slam_lifecycle_manager.yaml  vel_smoother.yaml
linorobot2_navigation/launch/: keepout.launch.py  map_editor.launch.py  navigation.launch.py  odometry.launch.py  slam_bringup.launch.py  slam_navigation.launch.py
linorobot2_navigation/maps/: greenhouse.pgm  greenhouse.yaml  greenhouse2.pgm  greenhouse2.yaml  greenhouse2_edited.pgm  greenhouse_keepout.pgm  greenhouse_keepout.yaml
linorobot2_navigation/rviz/: linorobot2_navigation.rviz  linorobot2_slam.rviz  linorobot2_slam_drone_boris.rviz  linorobot2_slam_drone_yuri.rviz
linorobot2_nicegui/: package.xml  (+2 more)
(+260 files in other folders)
