<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>antdrone_gz</name>
    <version>0.0.0</version>
    <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
    <description>ant drone gazebo launch</description>
    <license>Apache 2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>
    <depend>gazebo_msgs</depend>
    <depend>domain_bridge</depend>
    <depend>linkattacher_msgs</depend>
    <depend>rosgraph_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>nav2_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_msgs</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
